# otus

./: .$adapter.drawio.bkp  .clang-format  .gitignore  .tmux.conf  CController_8hpp.html  CController_8hpp__dep__incl.map  CController_8hpp__dep__incl.md5  CController_8hpp__incl.map  CController_8hpp__incl.md5  CController_8hpp_source.html  CDocument_8hpp.html  CDocument_8hpp__dep__incl.map  CDocument_8hpp__dep__incl.md5  CDocument_8hpp__incl.map  CDocument_8hpp__incl.md5  CDocument_8hpp_source.html  CFileManager_8hpp.html  CFileManager_8hpp__dep__incl.map  CFileManager_8hpp__dep__incl.md5  CFileManager_8hpp__incl.map  CFileManager_8hpp__incl.md5  CFileManager_8hpp_source.html  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeLists.txt  CPoint_8hpp.html  CPoint_8hpp__dep__incl.map  CPoint_8hpp__dep__incl.md5  CPoint_8hpp_source.html  Command.hpp  CommandBatch.hpp  CommandType.hpp  DataExtractor.hpp  Doxyfile  FileManager.hpp  ICommand.hpp  IGraphicPrimitive_8hpp.html  IGraphicPrimitive_8hpp__dep__incl.map  IGraphicPrimitive_8hpp__dep__incl.md5  IGraphicPrimitive_8hpp__incl.map  (+139 more)
.github/workflows/: release.yml
adapter/: Base64.hpp  Connection.hpp  ConnectionManager.hpp  ContextPool.hpp  Data.hpp  DataDirection.hpp  DataProcessor.hpp  DataQueue.hpp  IpTransparentOption.hpp  Listener.hpp  ListenerManager.hpp  Logger.hpp  Options.hpp  SafeQueue.hpp  Server.hpp  SocketIpTransparentOption.hpp
docker/: AdapterDockerfile.Dockerfile  ClientDockerfile.Dockerfile  ServerDockerfile.Dockerfile  adapter.yaml
docker/scripts/adapter/: adapter.sh
docker/scripts/client/: client.sh
docker/scripts/server/: server.sh
editor/: CController.hpp  CDocument.hpp  CFileManager.hpp  CPoint.hpp  IGraphicPrimitive.hpp
lib/: CRC16Hasher.hpp  CRC32Hasher.hpp  Command.hpp  CommandBatch.hpp  CommandType.hpp  Connection.hpp  Data.hpp  DataExtractor.hpp  DataExtractorManager.hpp  FileManager.hpp  FileReader.hpp  ICommand.hpp  IHasher.hpp  MD5Hasher.hpp  SHA1Hasher.hpp  SafeQueue.hpp  Server.hpp  async.cpp  async.hpp  file_reader.hpp  filter.hpp  options.hpp  safelist.hpp  search.hpp
libeditor/: CController.hpp  CDocument.hpp  CFileManager.hpp  IGraphicPrimitive.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  variables_0.js  variables_1.js  variables_2.js
server/: Connection.hpp  Server.hpp
